[package]
name = "tone3000"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Async Rust client for the TONE3000 API (v1)"
repository = "https://github.com/OpenSauce/tone3000-rs"
keywords = ["tone3000", "nam", "neural-amp-modeler", "guitar", "api"]
categories = ["api-bindings"]

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
tokio = { version = "1", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
url = "2"
sha2 = "0.10"
base64 = "0.22"
rand = "0.8"
bytes = "1"
futures-util = "0.3"

[dev-dependencies]
wiremock = "0.6"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-util"] }
